fix gap header

--- a/style/responsive.css
+++ b/style/responsive.css
@@ -23,6 +23,7 @@
 
     nav {
         padding-left: calc(2vw);
+        gap: 1em;
     }
 
     p {
